fix icon alignement for BaseAvatar

--- a/res/css/views/avatars/_DecoratedRoomAvatar.scss
+++ b/res/css/views/avatars/_DecoratedRoomAvatar.scss
@@ -26,9 +26,8 @@ limitations under the License.
 
     .mx_DecoratedRoomAvatar_icon {
         position: absolute;
-        bottom: -2px;
-        right: -2px;
-        margin: 4px;
+        bottom: 2px;
+        right: 2px;
         width: 8px;
         height: 8px;
         border-radius: 50%;
