--- a/res/css/views/rooms/_RoomTile.scss
+++ b/res/css/views/rooms/_RoomTile.scss
@@ -32,6 +32,7 @@ limitations under the License.
 
     .mx_DecoratedRoomAvatar, .mx_RoomTile_avatarContainer {
         margin-right: 8px;
+        line-height: 0;
     }
 
     .mx_RoomTile_nameContainer {
